[gd_scene load_steps=43 format=2]

[ext_resource path="res://Enemies/Slime.gd" type="Script" id=1]
[ext_resource path="res://Enemies/slime-Sheet.png" type="Texture" id=2]
[ext_resource path="res://Overlay/HitBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Base/Stats.tscn" type="PackedScene" id=4]
[ext_resource path="res://Enemies/WanderController.tscn" type="PackedScene" id=5]
[ext_resource path="res://Overlay/Hurtbox.tscn" type="PackedScene" id=6]
[ext_resource path="res://Overlay/PlayerDetectionZone.tscn" type="PackedScene" id=7]
[ext_resource path="res://Overlay/SoftCollision.tscn" type="PackedScene" id=8]
[ext_resource path="res://Effects/WhiteColor.shader" type="Shader" id=9]








[sub_resource type="ShaderMaterial" id=14]
resource_local_to_scene = true
shader = ExtResource( 9 )
shader_param/active = false

[sub_resource type="Animation" id=1]
resource_name = "Attack"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Death"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 19, 20 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}

[sub_resource type="Animation" id=3]
resource_name = "Hit"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Idle"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Movement"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7 ]
}

[sub_resource type="AnimationNodeAnimation" id=15]
animation = "Attack"

[sub_resource type="AnimationNodeAnimation" id=16]
animation = "Death"

[sub_resource type="AnimationNodeAnimation" id=17]
animation = "Hit"

[sub_resource type="AnimationNodeAnimation" id=18]
animation = "Idle"

[sub_resource type="AnimationNodeAnimation" id=19]
animation = "Movement"

[sub_resource type="AnimationNodeStateMachineTransition" id=20]

[sub_resource type="AnimationNodeStateMachineTransition" id=21]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=22]

[sub_resource type="AnimationNodeStateMachineTransition" id=23]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=24]

[sub_resource type="AnimationNodeStateMachineTransition" id=25]

[sub_resource type="AnimationNodeStateMachineTransition" id=26]

[sub_resource type="AnimationNodeStateMachineTransition" id=27]

[sub_resource type="AnimationNodeStateMachineTransition" id=28]

[sub_resource type="AnimationNodeStateMachineTransition" id=29]

[sub_resource type="AnimationNodeStateMachineTransition" id=30]

[sub_resource type="AnimationNodeStateMachineTransition" id=31]

[sub_resource type="AnimationNodeStateMachineTransition" id=32]

[sub_resource type="AnimationNodeStateMachineTransition" id=33]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachine" id=12]
states/Attack/node = SubResource( 15 )
states/Attack/position = Vector2( 541, 170 )
states/Death/node = SubResource( 16 )
states/Death/position = Vector2( 493, 370 )
states/Hurt/node = SubResource( 17 )
states/Hurt/position = Vector2( 801, 93 )
states/Idle/node = SubResource( 18 )
states/Idle/position = Vector2( 197, 176 )
states/Move/node = SubResource( 19 )
states/Move/position = Vector2( 448, 37 )
transitions = [ "Idle", "Move", SubResource( 20 ), "Move", "Idle", SubResource( 21 ), "Idle", "Attack", SubResource( 22 ), "Attack", "Idle", SubResource( 23 ), "Idle", "Death", SubResource( 24 ), "Attack", "Death", SubResource( 25 ), "Move", "Death", SubResource( 26 ), "Hurt", "Death", SubResource( 27 ), "Attack", "Hurt", SubResource( 28 ), "Move", "Hurt", SubResource( 29 ), "Attack", "Move", SubResource( 30 ), "Move", "Attack", SubResource( 31 ), "Hurt", "Move", SubResource( 32 ), "Hurt", "Idle", SubResource( 33 ) ]
start_node = "Idle"
end_node = "Death"

[sub_resource type="AnimationNodeStateMachinePlayback" id=13]

[sub_resource type="CapsuleShape2D" id=6]
radius = 4.0
height = 0.0

[sub_resource type="CapsuleShape2D" id=7]
radius = 11.0
height = 2.0

[sub_resource type="CircleShape2D" id=9]
radius = 103.019

[sub_resource type="CapsuleShape2D" id=8]

[sub_resource type="Animation" id=34]
resource_name = "Start"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=35]
resource_name = "Stop"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="Slime" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 14 )
position = Vector2( 0, -7 )
texture = ExtResource( 2 )
vframes = 3
hframes = 8
frame = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 1 )
anims/Death = SubResource( 2 )
anims/Hit = SubResource( 3 )
anims/Idle = SubResource( 4 )
anims/Movement = SubResource( 5 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 12 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 13 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 6 )

[node name="Hurtbox" parent="." instance=ExtResource( 6 )]
visible = false
collision_layer = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, -2 )
shape = SubResource( 7 )

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 7 )]
visible = false

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
shape = SubResource( 9 )

[node name="HitBox" parent="." instance=ExtResource( 3 )]
visible = false
collision_mask = 4

[node name="CollisionShape2D" parent="HitBox" index="0"]
rotation = 1.5708
shape = SubResource( 8 )

[node name="SoftCollision" parent="." instance=ExtResource( 8 )]
visible = false

[node name="Stats" parent="." instance=ExtResource( 4 )]
max_health = 2

[node name="WanderController" parent="." instance=ExtResource( 5 )]

[node name="BlinkAnimationPlayer" type="AnimationPlayer" parent="."]
anims/Start = SubResource( 34 )
anims/Stop = SubResource( 35 )
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="invincibility_ended" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_ended"]
[connection signal="invinciblity_started" from="Hurtbox" to="." method="_on_Hurtbox_invinciblity_started"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]

[editable path="Hurtbox"]

[editable path="PlayerDetectionZone"]

[editable path="HitBox"]
